--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy
-        run: echo "Deploying...."
+        run: echo "Deploying..."
